fixed bug on tablet

--- a/src/app/pages/homepage/homepage.component.css
+++ b/src/app/pages/homepage/homepage.component.css
@@ -19,7 +19,6 @@ html,body {
   min-width: 1024px;
   height: auto;
   width: 100%;
-  position: fixed;
   top: 0;
   left: 0;
 }
